--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="dropdown">
       <select name="one" class="dropdown-select">
         <option value="">Select…</option>
-        <option value="1">Hospital 1</option>
+        <option value="1">Maple Grove</option>
         <option value="2">Hospital 2</option>
         <option value="3">Hospital 3</option>
       </select>
@@ -61,9 +61,6 @@
   <fieldset>
     <h2 class="fs-title">The Record You Shared with your Doctor Below :</h2>
 
-    <h3>Vaccine : Hepatitis B </h3>
-    <h3>Vaccine : Hepatitis A </h3>
-    <h3>Vaccine : Hepatitis C </h3>
 
     <input type="button" name="next" class="next action-button" value="Done" />
 
