--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
   <fieldset>
     <h2 class="fs-title">Patient Data Portal</h2>
     <h3 class="fs-subtitle">Enter Your Name</h3>
-    <input type="text" name="email" placeholder="Bijie Zhu" />
+    <input type="text" name="email" placeholder="" />
     <!--<input type="password" name="pass" placeholder="Password" />--->
     <input type="button" name="next" class="next action-button" value="Next" />
   </fieldset>
   <fieldset>
-    <h2 class="fs-title">Your IntegraId is :</h2>
+    <h2 class="fs-title">Your Integra Id is :</h2>
     <div id = "hashCode"> 26a6684d-6254-429e-bd85-ebd03d2b61f7 </div>
       <!---<div id = "hashCode">  </div>--->
       <input type="button" name="previous" class="previous action-button" value="Previous" />
@@ -43,13 +43,13 @@
   </fieldset>
 
   <fieldset>
-    <h2 class="fs-title">Enter the Clinic Name You What to Share</h2>
+    <h2 class="fs-title">Enter Authorized Party to Receive Vaccination Transaction History</h2>
     <div class="dropdown">
       <select name="one" class="dropdown-select">
         <option value="">Select…</option>
-        <option value="1">Maple Grove</option>
-        <option value="2">Hospital 2</option>
-        <option value="3">Hospital 3</option>
+        <option value="1">Maple Grove High School</option>
+        <option value="2">Mayo Clinic Rochester, MN</option>
+        <option value="3">MIT</option>
       </select>
     </div>
       <!---<div id = "hashCode">  </div>--->
@@ -59,7 +59,7 @@
 
 
   <fieldset>
-    <h2 class="fs-title">The Record You Shared with your Doctor Below :</h2>
+    <h2 class="fs-title">Your Vaccination Record Transaction History Has Been Shared With Maple Grove High School :</h2>
 
 
     <input type="button" name="next" class="next action-button" value="Done" />
