--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <input type="button" name="next" class="next action-button" value="Next" />
   </fieldset>
   <fieldset>
-    <h2 class="fs-title">Your Integra Id is :</h2>
+    <h2 class="fs-title">Your Public Integra Id is :</h2>
     <div id = "hashCode"> 26a6684d-6254-429e-bd85-ebd03d2b61f7 </div>
       <!---<div id = "hashCode">  </div>--->
       <input type="button" name="previous" class="previous action-button" value="Previous" />
